@startuml
class org.example.crazyjoesworld.InfinityController {
- Pane infinityPane
- Button quit
- Rectangle player
- List<Rectangle> platforms
- List<Coin> coins
- Rectangle background1
- Rectangle background2
- boolean left
- double gravity
- double velocity
- double jumpStrength
- Rectangle wall
- double wallSpeed
- double playerSpeed
- Slider lautstaerke
- Slider sensibilitaet
- double sensi
- Rectangle triggerBox
- Rectangle deathBox
- ImageView flagImageView
- int collectedCoinCount
- Label lautstaerke_text
- Label sensibilitaet_text
~ Rectangle settingsBG
- Button zumHauptmenue
~ AnimationTimer gameLoop
- Button weiter
- boolean gewechselt
~ Media sound
~ MediaPlayer Music
~ int aktuellesLevel
~ int i
- boolean rechtslaufen
- boolean linkslaufen
- boolean gifRightrunning
- boolean gifLefrrunning
- boolean gifIdle
- boolean gifJumping
+ void initialize()
- void addEventListeners()
- void startGame()
- void handleKeyPressed(KeyEvent)
- void generateStartPlatforms()
- void generateNewPlatforms()
- void handleKeyReleased(KeyEvent)
- void update()
- void moveBackground(double)
- void checkCollisions()
+ void zumHauptmenue()
- void checkDeath()
- void onPlayerEnterBox()
+ void settings()
+ void weiter()
+ void lautsterkenregelung()
+ void sensibilitaetregelung()
+ Media getSound()
+ Pane getinfinityPane()
+ MediaPlayer getMusic()
+ int getAktuellesLevel()
+ double getSensi()
+ Slider getLautstaerkeSlider()
+ Slider getSensibilitaetSlider()
+ boolean isMusicPlaying()
+ Rectangle getPlayer()
}


class org.example.crazyjoesworld.AnimatedImageView {
- AnimatedImage imgs
- long startTime
+ void update()
}


class org.example.crazyjoesworld.Platform {
}
class org.example.crazyjoesworld.AnimatedImage {
+ Image[] frames
+ double duration
}

class org.example.crazyjoesworld.Application {
+ void start(Stage)
+ {static} void main(String[])
}

class org.example.crazyjoesworld.WinScreenController {
- Pane winScreenPane
- Label winText
- String oldGameCont
- String oldGameScreen
~ MediaPlayer Music
~ Media sound1
- int aktuellesLevel
+ void setCollectedCoinCount(int)
+ void setPlayedGame(int)
+ void nocheinmal()
+ void zurueck()
}


class org.example.crazyjoesworld.Coin {
}
class org.example.crazyjoesworld.DeathscreenController {
- int aktuellesLevel
~ Button nocheinmal
~ Pane deathscreenPane
~ MediaPlayer Music
~ Media sound1
+ void setPlayedGame(int)
+ void nocheinmal()
+ void zurueck()
+ void CauseOfDeath(int)
}


class org.example.crazyjoesworld.Singleton {
- {static} Singleton instance
- double lautstaerke
- double sensi
+ {static} Singleton getInstance()
+ double getLautstaerke()
+ void setLautstaerke(double)
+ double getSensi()
+ void setSensi(double)
}


class org.example.crazyjoesworld.Player {
- double velocityY
- boolean onGround
+ double getVelocityY()
+ void setVelocityY(double)
+ boolean isOnGround()
+ void setOnGround(boolean)
+ void move(double,double)
}


class org.example.crazyjoesworld.Game1Controller {
- Pane game1_pane
- Button quit
- Rectangle player
- List<Rectangle> platforms
- List<Rectangle> objects
- List<Coin> coins
- Rectangle background1
- Rectangle background2
- boolean left
- double gravity
- double velocity
- double jumpStrength
- double playerSpeed
- Slider lautstaerke
- Slider sensibilitaet
- double sensi
- Rectangle triggerBox
- Rectangle deathBox
- ImageView flagImageView
- int collectedCoinCount
- Label lautstaerke_text
- Label sensibilitaet_text
~ Rectangle settingsBG
- Button zumHauptmenue
~ AnimationTimer gameLoop
- Button weiter
~ Media sound
~ MediaPlayer Music
~ int aktuellesLevel
~ int i
- boolean rechtslaufen
- boolean linkslaufen
- boolean gewechselt
- boolean gifRightrunning
- boolean gifLefrrunning
- boolean gifIdle
- boolean gifJumping
+ void initialize()
- void addEventListeners()
- void startGame()
+ void levelauswahl(int)
- void generateCoins1()
- void generateCoins2()
- void generateCoins3()
- void generateCoins4()
- void generatePlatforms1(Image)
- void generatePlatforms2(Image)
- void generatePlatforms3(Image)
- void generatePlatforms4(Image)
- void handleKeyPressed(KeyEvent)
- void handleKeyReleased(KeyEvent)
- void update()
- void moveBackground(double)
- void checkCollisions()
- void checkCoinCollisions()
+ void zumHauptmenue()
- void checkBoxTrigger()
- void checkDeath()
- void onPlayerEnterBox()
+ void settings()
+ void weiter()
+ void lautsterkenregelung()
+ void sensibilitaetregelung()
+ Pane getGame1_pane()
+ MediaPlayer getMusic()
+ int getAktuellesLevel()
+ double getSensi()
+ Slider getLautstaerkeSlider()
+ Slider getSensibilitaetSlider()
+ boolean isMusicPlaying()
+ Rectangle getPlayer()
+ double getPlayerSpeed()
+ int getaktuellesLevle()
+ List<Coin> getCoins()
+ double getVelocity()
}


class org.example.crazyjoesworld.MainController {
- Button play
- Button quit
- Button settings
- Button zumHauptmenue
- Button zumHauptmenueGameSelector
- Label lautstaerke_text
- Label sensibilitaet_text
- Label mainMenueName
- Label t1
- Label t2
- Label t3
- Label t4
- Label t5
- Slider lautstaerke
- Slider sensibilitaet
~ Pane p_Pane
~ Pane p_game1
~ Rectangle settingsBG
~ Rectangle g1
~ Rectangle g2
~ Rectangle g3
~ Rectangle g4
~ Rectangle g5
- Stage stage
- Scene scene
- Parent root
~ Media sound1
~ MediaPlayer mainMenueMusic
~ Media sound2
~ MediaPlayer gameMusic
+ void play()
+ void quit()
+ void settings()
+ void zumHauptmenue()
+ void lautsterkenregelung()
+ void sensibilitaetregelung()
+ void game1()
+ void game2()
+ void game3()
+ void game4()
+ void infinity()
+ void initialize(URL,ResourceBundle)
+ void handle(long)
+ Button getPlay()
+ Button getQuit()
+ Button getSettings()
+ Button getZumHauptmenue()
+ Button getZumHauptmenueGameSelector()
+ Slider getLautstaerke()
+ Slider getSensibilitaet()
+ Pane getP_Pane()
+ Pane getP_game1()
+ Rectangle getG1()
+ Media getSound1()
+ MediaPlayer getMainMenueMusic()
+ Media getSound2()
+ MediaPlayer getGameMusic()
}




javafx.scene.image.ImageView <|-- org.example.crazyjoesworld.AnimatedImageView
javafx.scene.shape.Rectangle <|-- org.example.crazyjoesworld.Platform
org.example.crazyjoesworld.Application <|-- org.example.crazyjoesworld.Application
javafx.scene.image.ImageView <|-- org.example.crazyjoesworld.Coin
javafx.scene.shape.Rectangle <|-- org.example.crazyjoesworld.Player
javafx.fxml.Initializable <|.. org.example.crazyjoesworld.MainController
javafx.animation.AnimationTimer <|-- org.example.crazyjoesworld.MainController
@enduml